No more SVAIR
