# siade/swagger/api_particulier_open_api_static/v2.yaml
@@ -31,279 +31,6 @@ components:
         sur <a href="https://particulier.api.gouv.fr/compte">le portail API
         Particulier</a>
 paths:
-  /api/v2/avis-imposition:
-    get:
-      description: >-
-        Le service permet de vérifier l'authenticité du justificatif d'impôt sur
-        le revenu ou de l'avis d'impôt sur le revenu présenté par un usager.
-
-
-        **Paramètres d'appel :** numéro fiscal et numéro d'avis d'imposition
-
-        **Données disponibles en bac à sable :** [liste](https://github.com/etalab/siade_staging_data/tree/develop/payloads/api_particulier_v2_dgfip_situation_ir)
-      summary: Service de vérification de l'avis d'impôt sur le revenu
-      parameters:
-        &a4
-        - name: numeroFiscal
-          in: query
-          description: Numéro fiscal propre à chaque citoyen (identifiant numérique de 13
-            chiffres)
-          required: true
-          schema:
-            type: string
-        - name: referenceAvis
-          in: query
-          description: Référence de l'avis fiscal (identifiant alphanumérique de 13
-            caractères). Si l'avis est un avis de dégrèvement, l'identifiant est
-            alors composé de 14 caractères.
-          required: true
-          schema:
-            type: string
-        - name: recipient
-          in: query
-          description: |-
-            "**Bénéficiaire de l’appel**
-
-            SIRET de l’administration destinatrice des données."
-          example: '13002526500013'
-          required: false
-          schema:
-            type: string
-      tags:
-        &a5
-        - Avis d'imposition
-      responses:
-        "200":
-          x-operationId: api_particulier_v2_dgfip_situation_ir
-          description: Avis d'imposition
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  declarant1: &a1
-                    type: object
-                    properties:
-                      nom:
-                        type: string
-                        description: Nom du déclarant
-                        example: 'MARTIN'
-                      nomNaissance:
-                        type: string
-                        description: Nom de naissance du déclarant
-                        example: 'MARTIN'
-                      prenoms:
-                        type: string
-                        description: Prénoms du déclarant
-                        example: 'JEAN'
-
-                  declarant2: *a1
-                  foyerFiscal:
-                    type: object
-                    description: Adresse déclarée au 1e janvier
-                    properties:
-                      adresse:
-                        type: string
-                        example: '21 RUE DES MARMOTS 75001 PARIS'
-                      annee:
-                        type: number
-                        example: 2022
-                  dateRecouvrement:
-                    type: string
-                    description: Date de mise en recouvrement de l'avis d'impôt
-                    pattern: ^\d{2}/\d{2}/\d{4}$
-                    example: 31/07/2021
-                  dateEtablissement:
-                    type: string
-                    description: Date d'établissement
-                    pattern: ^\d{2}/\d{2}/\d{4}$
-                    example: 06/07/2021
-                  nombreParts:
-                    type: number
-                    description: Nombre de part(s)
-                    example: 1.0
-                  situationFamille:
-                    type: string
-                    description: Situation de famille
-                    example: 'Marié(e)s'
-                  revenuBrutGlobal:
-                    type: number
-                    description: Revenu brut global
-                    example: 30000
-                  revenuImposable:
-                    type: number
-                    description: Revenu imposable
-                    example: 29000
-                  impotRevenuNetAvantCorrections:
-                    type: number
-                    nullable: true
-                    description: Impôt sur le revenu net avant corrections. Est nul si Non imposable
-                  montantImpot:
-                    type: number
-                    nullable: true
-                    description: Montant de l'impôt. Est nul si Non imposable
-                  revenuFiscalReference:
-                    type: number
-                    description: Revenu fiscal de référence
-                    example: 29000
-                  nombrePersonnesCharge:
-                    type: integer
-                    description: "Nombre de personne(s) à charge"
-                    example: 3
-                  anneeImpots:
-                    type: string
-                    pattern: ^\d{4}$
-                    description: Année de l'impôt
-                    example: "2021"
-                  anneeRevenus:
-                    type: string
-                    pattern: ^\d{4}$
-                    description: Année des revenus
-                    example: "2020"
-                  erreurCorrectif:
-                    type: string
-                    example: ''
-                    description: |
-                      S'il existe un correctif plus récent que l'avis contrôlé, ce champ
-                      prend la valeur "Ce document ne correspond pas à la
-                      situation la plus récente pour cet usager". Sinon, le
-                      champ est vide. La présence de ce champ
-                      indique qu'il existe un avis d'imposition avec un numéro
-                      d'avis distinct qui contient les informations plus
-                      récentes. La mise à jour de l'avis initial est en général
-                      à l'initiative de l'administré auprès des impôts (par
-                      exemple : changement de revenus ou du nombre de part).
-                      L'API Particulier peut fournir cet avis à condition de
-                      connaître le numéro de l'avis le plus récent. L'API
-                      Particulier ne peut pas fournir le numéro de l'avis le
-                      plus récent en réponse de l'appel initial. Pour trouver le
-                      numéro de cet avis, il faut le demander au particulier
-                      auquel l'avis est adressé ou le demander manuellement
-                      auprès du centre des impôts de votre région. Vous
-                      trouverez de plus amples informations sur <a
-                      href="https://www.impots.gouv.fr/portail/precisions-sur-\
-                      le-service-de-verification-des-avis-dimpot-sur-le-revenu-\
-                      svair">le site des impôts</a>."
-                  situationPartielle:
-                    type: string
-                    example: ''
-                    description: |
-                      Le champ "situationPartielle" indique, dans un foyer marié ou
-                      pacsé, le décès d'un des contribuables. Cela signifie
-                      qu'il y aura 2 avis de taxations pour une même année : une
-                      taxation pour le couple du 01/01/AAAA à la date du décès
-                      d'un déclarant, et une autre taxation, pour le conjoint
-                      survivant, de la date de décès du conjoint au 31/12/AAAA.
-                      Ce champ prend la valeur "(*) Situation  {anneeRevenus}
-                      partielle". Sinon, le champ est vide."
-        "401":
-          &a6
-          description: Votre jeton d'API n'a pas été trouvé ou n'est pas actif
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: access_denied
-                  reason:
-                    type: string
-                    example: Token not found or inactive
-                  message:
-                    type: string
-                    example: Votre jeton d'API n'a pas été trouvé ou n'est pas actif
-        "404":
-          &a7
-          description: Les paramètres fournis sont incorrects ou ne correspondent pas à un
-            avis
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: not_found
-                  reason:
-                    type: string
-                    example: Les paramètres fournis sont incorrects ou ne correspondent pas à un
-                      avis
-                  message:
-                    type: string
-                    example: Les paramètres fournis sont incorrects ou ne correspondent pas à un
-                      avis
-        "500":
-          &a8
-          description: Une erreur interne s'est produite, l'équipe a été prévenue.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: error
-                  reason:
-                    type: string
-                    example: Internal server error
-                  message:
-                    type: string
-                    example: Une erreur interne s'est produite, l'équipe a été prévenue.
-        "502":
-          &a9
-          description: La réponse du fournisseur de donnée est inexploitable
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: invalid_response
-                  reason:
-                    type: string
-                    example: Data provider returned an invalid data format.
-                  message:
-                    type: string
-                    example: La réponse du fournisseur de donnée est inexploitable
-        "503":
-          &a10
-          description: Une erreur est survenue lors de l'appel au fournisseur de donnée
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: network_error
-                  reason:
-                    type: string
-                    example: timeout of 10000 ms exceeded
-                  message:
-                    type: string
-                    example: Une erreur est survenue lors de l'appel au fournisseur de donnée
-        "509":
-          &a11
-          description: Le fournisseur de donnée a rejeté la demande en raison d'un trop
-            grand nombre d'échecs antérieurs.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: rate_limited
-                  reason:
-                    type: string
-                    example: DGFIP error rate limit exceeded
-                  message:
-                    type: string
-                    example: Le fournisseur de donnée a rejeté la demande en raison d'un trop grand
-                      nombre d'échecs antérieurs.
-
   /api/v2/composition-familiale:
     get:
       summary: Quotient familial (CAF)
@@ -464,7 +191,24 @@ paths:
                     type: integer
                     description: Le quotient familial transmis correspond au QF du mois M-1 (M étant le mois de l'appel).
                     example: 6
-        "401": *a6
+        "401":
+          &a6
+          description: Votre jeton d'API n'a pas été trouvé ou n'est pas actif
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: access_denied
+                  reason:
+                    type: string
+                    example: Token not found or inactive
+                  message:
+                    type: string
+                    example: Votre jeton d'API n'a pas été trouvé ou n'est pas actif
+
         "404":
           &a13
           description: Dossier allocataire inexistant. Le document ne peut être édité.
@@ -483,7 +227,24 @@ paths:
                     type: string
                     example: Dossier allocataire inexistant. Le document ne peut être édité.
 
-        "500": *a8
+        "500":
+          &a8
+          description: Une erreur interne s'est produite, l'équipe a été prévenue.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: error
+                  reason:
+                    type: string
+                    example: Internal server error
+                  message:
+                    type: string
+                    example: Une erreur interne s'est produite, l'équipe a été prévenue.
+
         "503":
           &a14
           description: Erreur inconnue du fournisseur de donnée (CNAF)
@@ -712,8 +473,41 @@ paths:
                     type: string
                     example: Aucune situation Pôle emploi n'a pu être trouvée avec les critères de
                       recherche fournis
-        "500": *a8
-        "503": *a10
+        "500":
+          &a9
+          description: La réponse du fournisseur de donnée est inexploitable
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: invalid_response
+                  reason:
+                    type: string
+                    example: Data provider returned an invalid data format.
+                  message:
+                    type: string
+                    example: La réponse du fournisseur de donnée est inexploitable
+
+        "503":
+          &a10
+          description: Une erreur est survenue lors de l'appel au fournisseur de donnée
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: network_error
+                  reason:
+                    type: string
+                    example: timeout of 10000 ms exceeded
+                  message:
+                    type: string
+                    example: Une erreur est survenue lors de l'appel au fournisseur de donnée
   /api/v2/etudiants:
     get:
       tags:
@@ -917,7 +711,7 @@ paths:
             pattern: ^\d{4}-\d{2}-\d{2}$
             example: '1992-11-29'
         - name: lieuDeNaissance
-          description: Lieu de naissance de l'étudiant 
+          description: Lieu de naissance de l'étudiant
           in: query
           required: false
           schema:
